; ModuleID = '/home/carl/AnghaBench/git/extr_environment.c_get_log_output_encoding.c'
source_filename = "/home/carl/AnghaBench/git/extr_environment.c_get_log_output_encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@git_log_output_encoding = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_log_output_encoding() #0 {
  %1 = load i8*, i8** @git_log_output_encoding, align 8
  %2 = icmp ne i8* %1, null
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = load i8*, i8** @git_log_output_encoding, align 8
  br label %7

5:                                                ; preds = %0
  %6 = call i8* (...) @get_commit_output_encoding()
  br label %7

7:                                                ; preds = %5, %3
  %8 = phi i8* [ %4, %3 ], [ %6, %5 ]
  ret i8* %8
}

declare dso_local i8* @get_commit_output_encoding(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
